tooling/nargo_cli/tests/snapshots/execution_failure/regression_10238/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to subtract with overflow
  ┌─ src/main.nr:2:10
  │
2 │     if ((6863985126385003285_i64 - b) != 0) {
  │          ---------------------------
  │
  = Call stack:
    1. src/main.nr:2:10

Failed assertion
