tooling/nargo_cli/tests/snapshots/execution_failure/regression_10238/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to subtract with overflow
  ┌─ src/main.nr:2:10
  │
2 │     if ((6863985126385003285_i64 - b) != 0) {
  │          ---------------------------
  │

Error interpreting main function
